tests/ui/invalid_type_wch.stderr
error: expected one of: `u16`, `u32`, `i16`, `i32`, string literal, character literal
 --> $DIR/invalid_type_wch.rs:3:35
  |
3 | const INVALID_TYPE: &[f32] = wch!(f32, "oops");
  |                                   ^^^
